--- a/src/app/pages/admin/access-done/lateral-menu/lateral-menu.component.html
+++ b/src/app/pages/admin/access-done/lateral-menu/lateral-menu.component.html
@@ -8,7 +8,7 @@
         routerLink="/admin/dashboard" 
         routerLinkActive="active" 
         aria-current="page">
-        Dashboard
+        super admin
       </a>
     </li>
     <li class="nav-item">
@@ -22,17 +22,11 @@
     <li class="nav-item">
       <a 
         class="nav-link" 
-        routerLink="/admin/reports" 
+        routerLink="/admin/access-done/orders/list-orders/pagada" 
         routerLinkActive="active">
-        Reportes
+        orders
       </a>
     </li>
-    <li class="nav-item">
-      <a 
-        class="nav-link disabled" 
-        aria-disabled="true">
-        Configuraciones (Disabled)
-      </a>
-    </li>
+   
   </ul>
 </div>
