--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+
+<footer class="footer">
+    <div class="footer-container">
+      <!-- Logo Section -->
+      <div class="footer-logo">
+        <img src="assets/dos.svg" alt="">
+        <p>Phone Custom Case© All copyrights reserved.</p>
+      </div>
+  
+     
+  
+        <!-- Payment Methods -->
+        <div>
+          
+          <img src="assets/footer.jpg" alt="Verified by Visa" />
+       
+      </div>
+    </div>
+  </footer>
+  
