--- a/src/app/pages/crear/crear.component.html
+++ b/src/app/pages/crear/crear.component.html
@@ -1,8 +1,8 @@
-<app-header></app-header>
+<app-header-alternativo></app-header-alternativo>
 
 <router-outlet></router-outlet>
   
 
-<app-whatsap></app-whatsap> 
+
 
  
