--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,5 @@
-<app-header></app-header>
-<app-contenedor-top></app-contenedor-top>
-<app-promos></app-promos>
+<app-header-alternativo></app-header-alternativo>
+<app-contenedor-top-alternativo></app-contenedor-top-alternativo>
+
 <app-home-covers-muestras></app-home-covers-muestras>
-<app-whatsap></app-whatsap> 
 <app-footer></app-footer>
