--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 
-<router-outlet></router-outlet>
+
+<div class="main-layout">
+   
+    <main class="main-content">
+      <router-outlet></router-outlet>
+     
+    </main>
+    
+   
+  </div>
+  
