--- a/src/app/pages/crear/iphone-cover3d/iphone-cover3d.component.html
+++ b/src/app/pages/crear/iphone-cover3d/iphone-cover3d.component.html
@@ -1,55 +1,61 @@
 
 
-<div class="container">
+
   
-  <div class="left-panel">
-     <img [src]="selectedPhone?.image || './assets/iphone-c.png'" alt="Celular" class="phone-image" />
-  </div>
-  <div class="right-panel">
-    <h4>Iphone Cover 3D</h4>
-    <p>$ 90.000</p>
-    <div class="select-container">
-      <label for="phone-select">Modelo</label>
-      <select id="phone-select" (change)="onPhoneSelect($event)" class="form-select" aria-label="Default select example">
-        <option value="" disabled selected>Choose your phone</option>
-        <option *ngFor="let phone of phonesNombres" [value]="phone.nombre">{{ phone.nombre }}</option>
-      </select>
-      
+
+
+
+  <div class="customization-container">
+    <div class="phone-preview">
+      <picture>
+        <source srcset="assets/iphone-chica.png" media="(max-width: 500px)">
+        <img src="assets/iphone-c.png" alt="iphone">
+      </picture>
     </div>
-    <div *ngIf="messageErrorChoiceAModel" class="form-text" style="all: unset; color: red; margin-top: 0; margin-bottom: 0.25rem; text-align: left;">
-       please choice a model
-    </div>
-    <div class="select-container">
-      <label for="border-color-select" class="label">Border Color:</label>
-      <select id="border-color-select" (change)="onBorderColorChange($event)" class="form-select">
-        <option value="" disabled selected>Choose your border color</option>
-        <option value="transparent">Transparent</option>
-        <option value="white">White</option>
-        <option value="black">Black</option>
-      </select>
-      
-    </div>
-    <div *ngIf="messageErrorChoiceABorder"  class="form-text" style="all: unset; color: red; margin-top: 0; margin-bottom: 0.25rem; text-align: left;">
+    <div class="controls">
+      <h6>Iphone Cover 3D</h6>
+      <div class="control-group">
+        <label for="model">Modelo</label>
+        <select id="model"(change)="onPhoneSelect($event)" >
+          <option value="" disabled selected>Choose your phone</option>
+          <option *ngFor="let phone of phonesNombres" [value]="phone.nombre">{{ phone.nombre }}</option>
+          <!-- Agrega más opciones según sea necesario -->
+        </select>
+       
+      </div>
+      <div *ngIf="messageErrorChoiceAModel" class="form-text"style="color: red; margin-top: 0; margin-bottom: 0.25rem; text-align:center;" >
+        please choice a model
+     </div>
+      <div class="control-group">
+        <label for="color">Border Color</label>
+        <select id="color" (change)="onBorderColorChange($event)" >
+          <option value="" disabled selected>Choose your border color</option>
+          <option value="transparent">Transparent</option>
+          <option value="white">White</option>
+          <option value="black">Black</option>
+          <!-- Agrega más opciones -->
+        </select>
+      </div>
+      <div *ngIf="messageErrorChoiceABorder" class="form-text"style="color: red; margin-top: 0; margin-bottom: 0.25rem; text-align: center;" >
         please choice a border color
-    </div>
-    <div class="message available-count" *ngIf="messageAvaibleQuantity">
-      {{ message }}
-    </div>
-    <div class="number-input-container">
-      <input type="number"  [formControl]="quantityControl" class="number-input" placeholder="1" />
-      <button 
-        type="button" 
+      </div>
+      <div class="control-group">
+        <label for="quantity">Quantity</label>
+        <input  type="number" id="quantity" [formControl]="quantityControl" value={{quantityControl}} />
+       
+      </div>
+      <div class="control-group">
+        <button   type="button" 
         (click)="saveOrderToLocalStorage()" 
         class="customize-button" 
-        [disabled]="disabled" 
-        > Customize 
-      </button>
-
-
+        [disabled]="disabled" >Start Customizing</button>
+        <div class="message available-count" *ngIf="messageAvaibleQuantity">
+      {{ message }}
+     </div>
+      </div>
+     
     </div>
+     
   </div>
 
-  
-
-<app-whatsap></app-whatsap> 
-<app-footer></app-footer>
+ 
