--- a/src/app/pages/crear/personalize/personalize.component.css
+++ b/src/app/pages/crear/personalize/personalize.component.css
@@ -1,71 +1,107 @@
 
 :host{
-  display: flex;
-  justify-content: center;
+  font-family: "Montserrat", serif!important;
 }
 .container {
   text-align: center;
-  margin: 20px auto;
+  margin: 0px;
   display: flex;
   justify-content: space-between;
 }
-
+/* Estilos de step 1 add image */
 .columna-1-step-1{
+  display: grid;
+  grid-template-columns: 1fr 3fr 100px;
+  grid-template-rows: 200px 100px 100px;
+}
+.upload-box {
+  width: 250px;
+  height: 150px;
+  border: 2px dashed  #303672;
+  border-radius: 18px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  transition: background-color 0.2s;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  margin-right: 25px;
 }
+
+.upload-box:hover {
+  background-color: #e9ecef;
+}
+
+.upload-icon {
+  font-size: 36px;
+  color:#303672;
+  margin-bottom: 8px;
+}
+
+.upload-text {
+  color: #6c757d;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.upload-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
 canvas {
   border: 1px solid #ccc;
   display: block;
   margin: 0 auto;
   background-color: #f8f8f8;
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
 }
+.address canvas {
+  grid-column: unset;
+  grid-row: unset;
+}
+
+.rotate-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  grid-column: 1 / 2;
+  grid-row: 3/ 4;
+}
+.rotate-text {
+  font-size: 16px;
+  font-weight: 500;
+  color: #007bff; 
+  cursor: pointer;
+  transition: color 0.2s ease;
+}
+.rotate-text:hover {
+  color: #0056b3;
+}
+.button-container-1 {
+  display: flex;
+  justify-content:space-between;
+  align-items: center; 
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+/* fin Estilos de step 1 add image */
+
 
 .mat-form-field {
   margin-top: 16px;
 }
 
-.upload-button {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
 
-.upload-button input[type="file"] {
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  cursor: pointer;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
-
-.upload-button label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px; /* Espaciado entre el ícono y el texto */
-  background-color: #007bff; /* Color del botón */
-  color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 16px;
-  text-align: center;
-  transition: background-color 0.3s ease;
-  cursor: pointer; /* El cursor tipo pointer */
-}
-
-.upload-button label:hover {
-  background-color: #0056b3; /* Color al pasar el mouse */
-}
-
-.upload-button label img {
-  width: 24px; /* Tamaño del ícono */
-  height: 24px;
-}
 
 .stepper-container {
   display: flex;
@@ -95,58 +131,24 @@ button {
   width: 170px;
 }
 .styled-button {
-  background-color: #007bff; /* Color de fondo */
-  color: white; /* Color del texto */
-  border: none; /* Sin bordes */
-  border-radius: 5px; /* Bordes redondeados */
-  padding: 10px 20px; /* Espaciado interno */
-  font-size: 16px; /* Tamaño del texto */
-  cursor: pointer; /* Puntero tipo mano */
-  transition: background-color 0.3s ease; /* Animación suave */
+  background-color: #f04c4c; /* Color rojo */
+  color: white; /* Texto blanco */
+  border: none; /* Sin borde */
+  border-radius: 10px; /* Bordes redondeados */
+  padding:15px 23px; /* Espaciado interno */
+  font-size: 13px; /* Tamaño de fuente */
+  font-weight:400; /* Texto en negrita */
+  cursor: pointer; /* Cursor de mano */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  transition: transform 0.2s ease; /* Transición suave */
+  margin-left: 12px;
 }
 
 .styled-button:hover {
   background-color: #0056b3; /* Cambio de color al pasar el mouse */
 }
 
-.styled-button:active {
-  background-color: #003f7f; /* Cambio de color al hacer clic */
-}
 
-.upload-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100px; /* Ajusta la altura según tu diseño */
-}
-
-.upload-button {
-  display: inline-block;
-  padding: 10px 20px;
-  border: 2px solid rgba(200, 200, 200, 0.7);
-  border-radius: 5px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: rgba(200, 200, 200, 0.9);
-  background-color: transparent; /* Fondo transparente */
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-
-.upload-button:hover {
-  border-color: #fff;
-  color: #fff;
-  background-color: rgba(100, 100, 100, 0.2);
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-  transform: scale(1.05); /* Efecto de agrandamiento */
-}
-
-.upload-button:active {
-  transform: scale(0.98); /* Efecto al hacer clic */
-  box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
-}
 
 #finalCanvas , #canvasTresFinal{
   border-radius: 25px; /* Radio del borde */
@@ -172,35 +174,77 @@ button {
 .order-summary {
   text-align: center;
   padding: 20px;
+  overflow-x: auto;
+  display: block;
+  gap: 10px;
+  padding: 10px;
+  background-color: #f3f4f6;
 }
 
 .order-table {
   margin: 20px auto;
-  width: 80%;
-  border-collapse: collapse;
-}
-
-.order-table th, .order-table td {
+  border-collapse: collapse; /* Necesario para que border-radius funcione */
+  border-spacing: 0; /* Elimina espacios entre las celdas */
   border: 1px solid #ddd;
+  border-radius: 7px; /* Bordes redondeados generales */
+  overflow-x: auto !important;
+  max-width: 100% !important;
+}
+.table-container {
+  overflow-x: auto; 
+  max-width: 100%;
+}
+.order-table thead tr th {
+  background-color: #303672;
+  color: #d3d3d3;
   padding: 8px;
+  text-align: center;
 }
 
-.order-table th {
-  background-color: #f4f4f4;
+.order-table tbody tr td {
+  padding: 8px;
+  text-align: center;
+  border: 1px solid #ddd;
 }
+
+/* Aplica bordes redondeados específicos a las esquinas superiores */
+.order-table thead tr:first-child th:first-child {
+  border-top-left-radius: 7px;
+}
+
+.order-table thead tr:first-child th:last-child {
+  border-top-right-radius: 7px;
+}
+
+/* Aplica bordes redondeados específicos a las esquinas inferiores */
+.order-table tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 7px;
+}
+
+.order-table tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 7px;
+}
+
 
 .thumbnail-image {
   width: 50px;
   height: auto;
 }
 
+/* Botón de compra */
 .buy-button {
-  padding: 10px 20px;
-  background-color: #4CAF50;
+  padding: 0.8rem 2rem;
+  background-color: #f44336;
   color: white;
   border: none;
+  border-radius: 8px;
+  font-size: 1rem;
   cursor: pointer;
-  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.buy-button:hover {
+  background-color: #d32f2f;
 }
 
 .buy-button:disabled {
@@ -218,27 +262,7 @@ button {
   margin: auto;
 }
 
-.button-container {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 20px;
-}
 
-button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 14px;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
 
 h3 {
   font-size: 18px;
@@ -250,17 +274,12 @@ h3 {
   letter-spacing: 1px;
 }
 
-
-
-.styled-button {
-  background-color: #007bff; /* Color principal */
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.3s ease;
+h2{
+  font-weight: 700;
+  
 }
+
+
 
 .styled-button-disabled {
   background-color: #d3d3d3; /* Color para estado deshabilitado */
@@ -273,3 +292,94 @@ h3 {
   transform: scale(1.05); /* Pequeño aumento para resaltar */
 }
 
+
+.mat-stepper-vertical, .mat-stepper-horizontal {
+  font-family: "Montserrat", serif!important; 
+}
+
+/* responsive para step 1 */
+@media (max-width:860px) {
+  .columna-1-step-1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .upload-box{
+    margin-bottom: 20px;
+    position: relative;
+    left: 15px;
+  }
+}
+@media (max-width:450px) {
+  canvas {
+    position: relative;
+    left: -45px!important;
+  }
+  .address canvas {
+    
+    position: relative;
+    left: 5px!important;
+  }
+  .address{
+   width: 100%;
+  }
+  .step-container-2{
+    display: grid;
+ 
+    grid-template-rows: auto auto auto;
+    gap: 10px;
+    padding: 10px;
+    background-color: #f3f4f6;
+  }
+  .item1-step2 ,.item4-step2 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    align-items: center;  /* Centra verticalmente el contenido */
+    justify-content: center; /* Centra horizontalmente el contenido */
+  }
+  .item4-step2 {
+    position: relative;
+    left: 100px;
+    align-items: center;  /* Centra verticalmente el contenido */
+    justify-content: center; /* Centra horizontalmente el contenido */
+  }
+  .item2-step2 {
+    align-items: center;  /* Centra verticalmente el contenido */
+    justify-content: center; /* Centra horizontalmente el contenido */
+
+  }
+  .item2-step2 .lower-canvas{
+    right: -50px!important;
+  }
+  .columna-1-step-1{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: flex-start;
+    
+  }
+}
+@media (max-width:394px) {
+  canvas {
+    left: -55px!important;
+  }
+}
+@media (max-width:384px) {
+  canvas { 
+    left: -75px!important;
+  }
+}
+@media (max-width:324px) {
+  canvas {
+    left: -95px!important;
+  }
+  .rotate-container{
+    position: relative;
+    left: -15px!important;
+  }
+  .upload-box {
+    width: 200px;
+  }
+}
