--- a/src/app/pages/crear/personalize/user-detail/user-detail.component.html
+++ b/src/app/pages/crear/personalize/user-detail/user-detail.component.html
@@ -1,28 +1,69 @@
 
 <form [formGroup]="userFormGroup" class="container-form">
-    <mat-form-field>
-      <mat-label>Name</mat-label>
-      <input matInput formControlName="name" placeholder="Enter your name">
+  
+  <mat-form-field appearance="outline">
+    <mat-label>First Name</mat-label>
+    <input matInput formControlName="name" placeholder="Enter your first name">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Last Name</mat-label>
+    <input matInput formControlName="lastName" placeholder="Enter your last name">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Email</mat-label>
+    <input matInput formControlName="email" placeholder="Enter your email">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Phone</mat-label>
+    <input matInput formControlName="phone" placeholder="Enter your phone number">
+  </mat-form-field>
+
+  <!-- Subformulario para dirección -->
+  <div formGroupName="address">
+    <mat-form-field appearance="outline">
+      <mat-label>Street Name</mat-label>
+      <input matInput formControlName="streetName" placeholder="Enter your street name">
     </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Email</mat-label>
-      <input matInput formControlName="email" placeholder="Enter your email">
+    <mat-form-field appearance="outline">
+      <mat-label>Street Number</mat-label>
+      <input matInput formControlName="streetNumber" placeholder="Enter your street number">
     </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Phone</mat-label>
-      <input matInput formControlName="phone" placeholder="Enter your phone number">
+    <mat-form-field appearance="outline">
+      <mat-label>City</mat-label>
+      <input matInput formControlName="city" placeholder="Enter your city">
     </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Address</mat-label>
-      <input matInput formControlName="address" placeholder="Enter your address">
+    <mat-form-field appearance="outline">
+      <mat-label>State</mat-label>
+      <input matInput formControlName="state" placeholder="Enter your state">
     </mat-form-field>
-  </form>
-  <div class="button-container-step-2">
-    <button mat-button matStepperPrevious class="styled-button">Back</button>
-    <button mat-button matStepperNext [disabled]="!userFormGroup.valid"
-    [ngClass]="{'styled-button': true, 'styled-button-disabled': !userFormGroup.valid, 'styled-button-active': userFormGroup.valid}"
-    class="styled-button"(click)="onNext()" >Next</button>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Zip Code</mat-label>
+      <input matInput formControlName="zipCode" placeholder="Enter your zip code">
+    </mat-form-field>
   </div>
+
+</form>
+
+<!-- Botones de navegación -->
+<div class="button-container-step-2">
+  <button mat-button matStepperPrevious class="styled-button">Back</button>
+  <button 
+    mat-button 
+    matStepperNext 
+    [disabled]="!userFormGroup.valid"
+    [ngClass]="{
+      'styled-button': true, 
+      'styled-button-disabled': !userFormGroup.valid, 
+      'styled-button-active': userFormGroup.valid
+    }"
+    class="styled-button" 
+    (click)="onNext()">Next
+  </button>
+</div>
