--- a/src/app/pages/home/home-covers-muestras/home-covers-muestras.component.html
+++ b/src/app/pages/home/home-covers-muestras/home-covers-muestras.component.html
@@ -1,15 +1,38 @@
 
-<h2>This is how your personalized covers would look</h2>
-<div class="video-muestra"></div>
+<p>
+    CUSTOM AT YOUR <span class="blue">STYLE</span><br>
+    THE <span class="orange">HOTTEST</span> OF THE SEASON
+  </p>
+  
+<!--<div class="video-muestra"></div>-->
 <div class="grid-container">
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
+    <div class="item">
+        <div class="offer-label" >OFERT</div>
+        <img src="assets/portada-phone1.jpg" alt="">
+    </div>
+    <div class="item">  
+        <div class="offer-label" >OFERT</div>
+        <img src="assets/portada-phone2.jpg" alt="">
+    </div>
+    <div class="item">
+        <div class="offer-label" >OFERT</div>
+        <img src="assets/portada-phone3.jpg" alt="">
+    </div>
+    <div class="item">
+        <div class="offer-label" >OFERT</div>
+        <img src="assets/portada-phone4.jpg" alt="">
+    </div>
+    <!--<div class="item"></div>-->
 </div>
 
+<!--
 <div class="flex-container">
     <div class="item-flex"appScrollAnimation ></div>
     <div class="item-flex" appScrollAnimation></div>
-</div>
+</div>-->
+
+<div class="decorations">
+    <div class="circle orange"></div>
+    <div class="circle blue"></div>
+    <div class="circle yellow"></div>
+  </div>
