--- a/src/app/pages/home/contenedor-top-alternativo/contenedor-top-alternativo.component.css
+++ b/src/app/pages/home/contenedor-top-alternativo/contenedor-top-alternativo.component.css
@@ -152,3 +152,13 @@
     }
   }
   
+  @media (min-height: 1000px) {
+    .banner-container { 
+      height: auto; /* O un valor fijo, como 800px si lo necesitas */
+    }
+  }
+
+  img{
+    width: 100%;
+  }
+  
