--- a/src/app/pages/home/contenedor-top-alternativo/contenedor-top-alternativo.component.html
+++ b/src/app/pages/home/contenedor-top-alternativo/contenedor-top-alternativo.component.html
@@ -11,7 +11,9 @@
         <h2><span class="designs">BLOW </span><span>YOUR MIND</span></h2>
         <p>bringing your ideas to reality</p>
         <div class="buttons">
-          <button class="btn-primary">Get Started</button>
+          <button class="btn-primary"
+                   routerLink="/create" routerLinkActive="active"[routerLinkActiveOptions]="{ exact: false }">
+                   Get Started</button>
         
         </div>
       </div>
