--- a/src/app/pages/home/home-covers-muestras/home-covers-muestras.component.html
+++ b/src/app/pages/home/home-covers-muestras/home-covers-muestras.component.html
@@ -7,19 +7,19 @@
 <!--<div class="video-muestra"></div>-->
 <div class="grid-container">
     <div class="item">
-        <div class="offer-label" >OFERT</div>
+        <div class="offer-label orange-background" >you can</div>
         <img src="assets/portada-phone1.jpg" alt="">
     </div>
     <div class="item">  
-        <div class="offer-label" >OFERT</div>
+        <div class="offer-label blue-background" >build your</div>
         <img src="assets/portada-phone2.jpg" alt="">
     </div>
     <div class="item">
-        <div class="offer-label" >OFERT</div>
+        <div class="offer-label yellow-background" >phone </div>
         <img src="assets/portada-phone3.jpg" alt="">
     </div>
     <div class="item">
-        <div class="offer-label" >OFERT</div>
+        <div class="offer-label custom" >custom case</div>
         <img src="assets/portada-phone4.jpg" alt="">
     </div>
     <!--<div class="item"></div>-->
