--- a/src/app/pages/crear/iphone-cover2d/iphone-cover2d.component.html
+++ b/src/app/pages/crear/iphone-cover2d/iphone-cover2d.component.html
@@ -37,7 +37,7 @@
       please choice a border color
     </div>
     <div class="control-group">
-      <label for="quantity">Quantity</label>
+      <label for="quantity">Choice Quantity</label>
       <input  type="number" id="quantity" [formControl]="quantityControl" value={{quantityControl}} />
      
     </div>
