--- a/src/app/pages/home/home-covers-muestras/home-covers-muestras.component.css
+++ b/src/app/pages/home/home-covers-muestras/home-covers-muestras.component.css
@@ -46,7 +46,7 @@ h2{
     font-size: 18px; /* Tamaño de letra */
     font-weight: bold; /* Negrita */
     border-radius: 8px; /* Bordes redondeados */
-    
+    width: 200px;
     transition: transform 0.3s, box-shadow 0.3s; /* Animación suave */
     text-align: center;
   }
@@ -105,6 +105,19 @@ h2{
     text-transform: uppercase;
   }
   
+  .blue-background {
+    background-color: #4A90E2; /* Azul */
+  }
+  
+  .orange-background {
+    background-color: #F57C25; /* Naranja */
+  }
+  
+  .yellow-background {
+    color: #0056b3!important;
+    background-color: #ffeb3b;
+    
+  }
   .blue {
     color: #4A90E2; /* Azul */
   }
@@ -112,8 +125,14 @@ h2{
   .orange {
     color: #F57C25; /* Naranja */
   }
-  
-
+  .custom{
+    background-color: #0056b3;
+  }
+  .yellow {
+    
+    color: #ffeb3b;
+    
+  }
   .item img {
     max-width: 100%!important;  /* No más grande que su contenedor */
     height: auto!important;     /* Mantiene la proporción */
@@ -123,12 +142,11 @@ h2{
     position: absolute;
     top: 10px;
     left: 18px;
-    background-color: red;
     color: white;
     padding: 5px 10px;
-    font-size: 14px;
-    font-weight: bold;
+    font-size: 12px;
     border-radius: 3px;
+    font-family: "Montserrat", serif;
   }
 
   .circle {
